feat: switch theme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резюме</title>
     <link rel="stylesheet" href="style.css">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -22,7 +21,7 @@
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-github"></i>
-                        <a href="https://github.com/sDenisss" class="contact-link">Github</a>
+                        <a href="https://github.com/Underfnd" class="contact-link">Github</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
@@ -35,6 +34,12 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <span>+7 (921) 565-82-74</span>
+                    </div>
+                    <div class="contact-item theme-toggle">
+                        <i class="fas fa-moon" id="theme-icon"></i>
+                        <button id="theme-toggle" class="theme-toggle-btn">
+                            <span class="theme-toggle-icon"></span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -77,7 +82,7 @@
                             <p><strong>Особенности:</strong> Чистая архитектура, безопасность, современная структура проекта.</p>
                             <div class="project-github-item">
                                 <i class="fab fa-github"></i>
-                                <a href="https://github.com/sDenisss/LinkUp" class="contact-link">Github</a>
+                                <a href="https://github.com/Underfnd/LinkUp" class="contact-link">Github</a>
                             </div>
                         </div>
                     </div>
@@ -91,7 +96,7 @@
                             <p><strong>Особенности:</strong> Гибкая система добавления вопросов и квизов через БД, модульная архитектура.</p>
                             <div class="project-github-item">
                                 <i class="fab fa-github"></i>
-                                <a href="https://github.com/sDenisss/EducationalQuizBot" class="contact-link">Github</a>
+                                <a href="https://github.com/Underfnd/EducationalQuizBot" class="contact-link">Github</a>
                             </div>
                         </div>
                     </div>
@@ -101,16 +106,16 @@
                         <div class="project-description">
                             <p>Серия мини-проектов туристического гида с различными технологическими стеками:</p>
                             <ul>
-                                <li><strong>Консольное приложение</strong> - работа с коллекциями в памяти, поиск и планирование маршрутов, unit-тесты</li>
-                                <li><strong>Консольное приложение с БД</strong> - Entity Framework Core + SQLite, хранение истории и достопримечательностей</li>
-                                <li><strong>Веб-приложение</strong> - ASP.NET Core Web API + SQLite + статический фронтенд (HTML/CSS)</li>
-                                <li><strong>WPF приложение</strong> - десктопный интерфейс с локальной логикой</li>
+                                <p><strong>Консольное приложение</strong> - работа с коллекциями в памяти, поиск и планирование маршрутов, unit-тесты</p>
+                                <p><strong>Консольное приложение с БД</strong> - Entity Framework Core + SQLite, хранение истории и достопримечательностей</p>
+                                <p><strong>Веб-приложение</strong> - ASP.NET Core Web API + SQLite + статический фронтенд (HTML/CSS)</p>
+                                <p><strong>WPF приложение</strong> - десктопный интерфейс с локальной логикой</p>
                             </ul>
                             <p><strong>Технологии:</strong> C#, ASP.NET Core, Entity Framework Core, SQLite, WPF, xUnit.</p>
                             <p><strong>Особенности:</strong> Демонстрация различных подходов к разработке одного приложения.</p>
                             <div class="project-github-item">
                                 <i class="fab fa-github"></i>
-                                <a href="https://github.com/sDenisss/Tourist-Guide-2024" class="contact-link">Github</a>
+                                <a href="https://github.com/Underfnd/Tourist-Guide-2024" class="contact-link">Github</a>
                             </div>
                         </div>
                     </div>
@@ -177,11 +182,13 @@
                     <div class="hobbies">
                         <span class="hobby">Программирование</span>
                         <span class="hobby">Настольные игры</span>
-                        <span class="hobby">Технологии</span>
+                        <span class="hobby">Технологии</span> 
+                        <span class="hobby">Фильмы</span> 
                     </div>
                 </section>
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
